[build-system]
  build-backend = "uv_build"
  requires = ["uv_build"]


[dependency-groups]
  dev = ["dycw-utilities[test]>=0.191.0", "orjson>=3.11.7", "pyright>=1.1.408"]


[project]
  authors = [{ email = "d.wan@icloud.com", name = "Derek Wan" }]
  dependencies = [
    "click>=8.3.1",
    "dycw-installer>=0.9.1",
    "dycw-utilities>=0.191.0",
  ]
  description = "Library to operate `postgres` and `pgbackrest`"
  name = "dycw-postgres"
  readme = "README.md"
  requires-python = ">= 3.12"
  version = "0.2.5"

  [project.optional-dependencies]
    cli = ["click==8.3.1", "dycw-installer==0.9.1", "dycw-utilities==0.191.0"]

  [project.scripts]
    backup = "postgres._cli:backup_cli"
    check = "postgres._cli:check_cli"
    cli = "postgres._cli:group_cli"
    info = "postgres._cli:info_cli"
    restore = "postgres._cli:restore_cli"
    set-up = "postgres._cli:set_up_cli"
    stanza-create = "postgres._cli:stanza_create_cli"
    start = "postgres._cli:start_cli"
    stop = "postgres._cli:stop_cli"


[tool]
  [tool.uv]
    [tool.uv.build-backend]
      module-name = "postgres"
      module-root = "src"
